fixed overflow text on contact

--- a/src/styles.css
+++ b/src/styles.css
@@ -64,8 +64,8 @@ body {
     display: flex;
     flex-direction: column;
     width: 25%;
-    align-items: center;
     text-align: center;
+    word-wrap: break-word;
     border: 4px solid rgb(150, 71, 63);
     gap: 8px;
     margin: 8px 8px 8px 8px;
